hc32f460/src/hc32_ll_tmr6.rs

#[doc = " @brief Timer6 pwm output function structure definition"]
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct stc_tmr6_pwm_init_t {
    #[doc = "< Range (0 ~ 0xFFFF) or (0 ~ 0xFFFFFFFF)"]
    pub u32CompareValue: u32,
    #[doc = "< Pin polarity when count start @ref TMR6_Pin_Polarity_Define"]
    pub u32StartPolarity: u32,
    #[doc = "< Pin polarity when count stop @ref TMR6_Pin_Polarity_Define"]
    pub u32StopPolarity: u32,
    pub u32CompareMatchPolarity: u32,
    #[doc = " Pin polarity when compare register @ref TMR6_Pin_Polarity_Define"]
    pub u32PeriodMatchPolarity: u32,
    #[doc = " Pin polarity when period register @ref TMR6_Pin_Polarity_Define"]
    pub u32StartStopHold: u32,
}
#[doc = " @brief Timer6 buffer function configuration structure definition"]
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct stc_tmr6_buf_config_t {
    #[doc = "< The buffer number, and this parameter can be a value of \\\n@ref TMR6_Buf_Num_Define"]
    pub u32BufNum: u32,
    #[doc = "< The buffer send time, and this parameter can be a value of \\\n@ref TMR6_Buf_Trans_Cond_Define"]
    pub u32BufTransCond: u32,
}
#[doc = " @brief Timer6 Valid period function configuration structure definition"]
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct stc_tmr6_valid_period_config_t {
    #[doc = "< The count condition, and this parameter can be a value of \\\n@ref TMR6_Valid_Period_Count_Cond_Define"]
    pub u32CountCond: u32,
    #[doc = "< The interval of the valid period @ref TMR6_Valid_Period_Count_Define"]
    pub u32PeriodInterval: u32,
}
#[doc = " @brief Timer6 EMB configuration structure definition"]
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct stc_tmr6_emb_config_t {
    #[doc = "< Pin output status when EMB event valid @ref TMR6_Emb_Pin_Status_Define"]
    pub u32PinStatus: u32,
}
#[doc = " @brief Timer6 Dead time function configuration structure definition"]
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct stc_tmr6_deadtime_config_t {
    #[doc = "< Enable down count dead time register equal to up count DT register \\\n@ref TMR6_DeadTime_Reg_Equal_Func_Define"]
    pub u32EqualUpDown: u32,
    #[doc = "< Enable buffer transfer for up count dead time register (DTUBR-->DTUAR) \\\n@ref TMR6_DeadTime_CountUp_Buf_Func_Define"]
    pub u32BufUp: u32,
    #[doc = "< Enable buffer transfer for down count dead time register (DTDBR-->DTDAR) \\\n@ref TMR6_DeadTime_CountDown_Buf_Func_Define"]
    pub u32BufDown: u32,
}
#[doc = " @brief Timer6 Dead time function configuration structure definition"]
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct stc_tmr6_zmask_config_t {
    #[doc = "< Z phase input mask periods selection @ref TMR6_Zmask_Cycle_Define"]
    pub u32ZMaskCycle: u32,
    #[doc = "< As position count timer, clear function enable(TRUE) or disable(FALSE) during \\\nthe time of Z phase input mask @ref TMR6_Zmask_Pos_Unit_Clear_Func_Define"]
    pub u32PosCountMaskFunc: u32,
    #[doc = "< As revolution count timer, the counter function enable(TRUE) or disable(FALSE) \\\nduring the time of Z phase input mask \\\n@ref TMR6_Zmask_Revo_Unit_Count_Func_Define"]
    pub u32RevoCountMaskFunc: u32,
}
unsafe extern "C" {
    pub fn TMR6_StructInit(pstcTmr6Init: *mut stc_tmr6_init_t) -> i32;
    pub fn TMR6_Init(TMR6x: *mut CM_TMR6_TypeDef, pstcTmr6Init: *const stc_tmr6_init_t) -> i32;
    pub fn TMR6_SetCountMode(TMR6x: *mut CM_TMR6_TypeDef, u32Mode: u32);
    pub fn TMR6_SetCountDir(TMR6x: *mut CM_TMR6_TypeDef, u32Dir: u32);
    pub fn TMR6_GetCountDir(TMR6x: *mut CM_TMR6_TypeDef) -> u32;
    pub fn TMR6_SetClockDiv(TMR6x: *mut CM_TMR6_TypeDef, u32Div: u32);
    pub fn TMR6_HWCountUpCondCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Cond: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_HWCountDownCondCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Cond: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_PWM_StructInit(pstcPwmInit: *mut stc_tmr6_pwm_init_t) -> i32;
    pub fn TMR6_PWM_Init(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Ch: u32,
        pstcPwmInit: *const stc_tmr6_pwm_init_t,
    ) -> i32;
    pub fn TMR6_PWM_OutputCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Ch: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_PWM_SetPolarity(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Ch: u32,
        u32CountState: u32,
        u32Polarity: u32,
    );
    pub fn TMR6_PWM_SetStartStopHold(TMR6x: *mut CM_TMR6_TypeDef, u32Ch: u32, u32HoldStatus: u32);
    pub fn TMR6_HWCaptureCondCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Ch: u32,
        u32Cond: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_SetFilterClockDiv(TMR6x: *mut CM_TMR6_TypeDef, u32Pin: u32, u32Div: u32);
    pub fn TMR6_FilterCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Pin: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_SetFunc(TMR6x: *mut CM_TMR6_TypeDef, u32Ch: u32, u32Func: u32);
    pub fn TMR6_IntCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32IntType: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_GetStatus(TMR6x: *const CM_TMR6_TypeDef, u32Flag: u32) -> en_flag_status_t;
    pub fn TMR6_ClearStatus(TMR6x: *mut CM_TMR6_TypeDef, u32Flag: u32);
    pub fn TMR6_GetPeriodNum(TMR6x: *const CM_TMR6_TypeDef) -> u32;
    pub fn TMR6_DeInit(TMR6x: *mut CM_TMR6_TypeDef);
    pub fn TMR6_Start(TMR6x: *mut CM_TMR6_TypeDef);
    pub fn TMR6_Stop(TMR6x: *mut CM_TMR6_TypeDef);
    pub fn TMR6_SetCountValue(TMR6x: *mut CM_TMR6_TypeDef, u32Value: u32);
    pub fn TMR6_SetPeriodValue(TMR6x: *mut CM_TMR6_TypeDef, u32Index: u32, u32Value: u32);
    pub fn TMR6_SetCompareValue(TMR6x: *mut CM_TMR6_TypeDef, u32Index: u32, u32Value: u32);
    pub fn TMR6_SetSpecialCompareValue(TMR6x: *mut CM_TMR6_TypeDef, u32Index: u32, u32Value: u32);
    pub fn TMR6_SetDeadTimeValue(TMR6x: *mut CM_TMR6_TypeDef, u32Index: u32, u32Value: u32);
    pub fn TMR6_GetCountValue(TMR6x: *const CM_TMR6_TypeDef) -> u32;
    pub fn TMR6_GetPeriodValue(TMR6x: *const CM_TMR6_TypeDef, u32Index: u32) -> u32;
    pub fn TMR6_GetCompareValue(TMR6x: *const CM_TMR6_TypeDef, u32Index: u32) -> u32;
    pub fn TMR6_GetSpecialCompareValue(TMR6x: *const CM_TMR6_TypeDef, u32Index: u32) -> u32;
    pub fn TMR6_GetDeadTimeValue(TMR6x: *const CM_TMR6_TypeDef, u32Index: u32) -> u32;
    pub fn TMR6_SetGeneralBufNum(TMR6x: *mut CM_TMR6_TypeDef, u32Ch: u32, u32BufNum: u32);
    pub fn TMR6_SetPeriodBufNum(TMR6x: *mut CM_TMR6_TypeDef, u32BufNum: u32);
    pub fn TMR6_SpecialBufConfig(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Ch: u32,
        pstcBufConfig: *const stc_tmr6_buf_config_t,
    ) -> i32;
    pub fn TMR6_GeneralBufCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Ch: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_SpecialBufCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Ch: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_PeriodBufCmd(TMR6x: *mut CM_TMR6_TypeDef, enNewState: en_functional_state_t);
    pub fn TMR6_ValidPeriodConfig(
        TMR6x: *mut CM_TMR6_TypeDef,
        pstcValidperiodConfig: *const stc_tmr6_valid_period_config_t,
    ) -> i32;
    pub fn TMR6_ValidPeriodCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Ch: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_DeadTimeFuncCmd(TMR6x: *mut CM_TMR6_TypeDef, enNewState: en_functional_state_t);
    pub fn TMR6_DeadTimeConfig(
        TMR6x: *mut CM_TMR6_TypeDef,
        pstcDeadTimeConfig: *const stc_tmr6_deadtime_config_t,
    ) -> i32;
    pub fn TMR6_ZMaskConfig(
        TMR6x: *mut CM_TMR6_TypeDef,
        pstcZMaskConfig: *const stc_tmr6_zmask_config_t,
    ) -> i32;
    pub fn TMR6_EMBConfig(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Ch: u32,
        pstcEmbConfig: *const stc_tmr6_emb_config_t,
    ) -> i32;
    pub fn TMR6_BufFuncStructInit(pstcBufConfig: *mut stc_tmr6_buf_config_t) -> i32;
    pub fn TMR6_ValidPeriodStructInit(
        pstcValidperiodConfig: *mut stc_tmr6_valid_period_config_t,
    ) -> i32;
    pub fn TMR6_EMBConfigStructInit(pstcEmbConfig: *mut stc_tmr6_emb_config_t) -> i32;
    pub fn TMR6_DeadTimeStructInit(pstcDeadTimeConfig: *mut stc_tmr6_deadtime_config_t) -> i32;
    pub fn TMR6_ZMaskConfigStructInit(pstcZMaskConfig: *mut stc_tmr6_zmask_config_t) -> i32;
    pub fn TMR6_SWSyncStart(u32Unit: u32);
    pub fn TMR6_SWSyncStop(u32Unit: u32);
    pub fn TMR6_SWSyncClear(u32Unit: u32);
    pub fn TMR6_HWStartCondCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Cond: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_HWStartCmd(TMR6x: *mut CM_TMR6_TypeDef, enNewState: en_functional_state_t);
    pub fn TMR6_HWStopCondCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Cond: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_HWStopCmd(TMR6x: *mut CM_TMR6_TypeDef, enNewState: en_functional_state_t);
    pub fn TMR6_HWClearCondCmd(
        TMR6x: *mut CM_TMR6_TypeDef,
        u32Cond: u32,
        enNewState: en_functional_state_t,
    );
    pub fn TMR6_HWClearCmd(TMR6x: *mut CM_TMR6_TypeDef, enNewState: en_functional_state_t);
}
